tests/paczka1/fuzzy1/44915168.err
Error in line 2: gAst74NbJmr S709 47,86
Error in line 5: sIC S345 17,5
Error in line 14: S709 S817 55,5
Error in line 16: S709 A322 21,7
Error in line 24: cVOpm S345 35,4
Error in line 33: sIC S"09 11,6
Error in line 26: 52iHJSIXpEZ S817 87,8
